feat: add global template directory with documented configs
Add ~/.vellum-fe/global/templates/ directory that preserves fully
documented config and layout template files with all comments intact.

Changes:
- Add DEFAULT_LAYOUT_TEMPLATE constant from defaults/layout_template.toml
- Create global/templates/ directory on first run
- Copy config.toml to global/templates/config.toml with all comments
- Copy layout_template.toml to global/templates/layout_template.toml

Rationale:
Profile configs (in profiles/{character}/) have comments stripped during
extraction. Global templates provide reference documentation for users
to understand all available configuration options.

Files modified:
- src/config.rs: Add template constant and extraction logic

--- a/defaults/colors.toml
+++ b/defaults/colors.toml
@@ -28,7 +28,10 @@ fg = "ANSI Green"
 fg = "ANSI Green"
 
 [presets.monsterbold]
-fg = "ANSI Yellow"
+fg = "#FFFF00"  # ANSI Yellow - used for creature names
+
+[presets.target_indicator]
+fg = "#FFFFFF"  # ANSI Bright White - used for current target indicator
 
 [presets.familiar]
 fg = "Familiar"
