feat(spells): add complete spells window support with click handling
- Add parser support for inline <stream id="Spells"> tags
- Implement spells buffering with line accumulation (fixes blank lines)
- Add click handling to spells window with cmdlist lookup
- Execute spell commands directly via coord field (no popup menu)
- Support both individual spell clicks and spell circle clicks

The spells buffer uses a double-buffer system with change detection
to persist spell data across window creation/deletion. Each <stream>
tag accumulates segments into a line buffer, then flushes on </stream>.

Click handling checks for coord field in LinkData:
- If coord exists: look up in cmdlist.xml, substitute placeholders, send command
- If no coord: fall back to context menu popup

Fixes spell window not populating and spell links showing wrong behavior

--- a/defaults/config.toml
+++ b/defaults/config.toml
@@ -124,7 +124,7 @@ perf_stats_height = 23
 # ------------------------------------------------------------
 # TARGET LIST
 # ------------------------------------------------------------
-# Configuration for the dropdown_targets widget (direct connect).
+# Configuration for the targets widget.
 # Controls how creature names and statuses are displayed.
 
 [target_list]
