feat: add dialog input fields and Lich StormFront identity
Dialog Input Fields:
- Add full <editBox> and <label> parsing for dynamic dialogs
- Implement text field editing with cursor navigation
- Add Tab/Shift+Tab navigation between fields and buttons
- Support Enter key to trigger field enterButton targets
- Implement placeholder substitution (%field_id%) in commands
- Add mouse click support for field focusing
- Create dedicated dialog renderer (dialog.rs)
- Add quickbar support with dedicated renderer (quickbar.rs)

Network Identity:
- Identify as StormFront to Lich on connection
- Execute ;eq $frontend="stormfront" after PID handshake
- Enables full feature parity with StormFront frontend
- Scripts now see VellumFE as stormfront instead of profanity

Parser Enhancements:
- Parse <dialogData> with type detection (dialog vs quickbar)
- Extract <editBox> fields with focus, value, enterButton
- Extract <label> elements for field labels
- Add comprehensive parser integration tests

State Management:
- Extend DialogState with fields, labels, focused_field
- Add session caching for dialog state persistence
- Track field values, cursor positions, focus state
- Support dialog field updates and merging

Input Handling:
- Text editing: typing, backspace, delete, cursor movement
- Field navigation: Tab, Shift+Tab, mouse clicks
- Submit handling: Enter triggers enterButton or selected button
- Placeholder substitution in command strings

Configuration:
- Add dialog-related config options
- Session cache configuration

Files Added:
- src/frontend/tui/dialog.rs - Dialog renderer
- src/frontend/tui/quickbar.rs - Quickbar renderer
- src/session_cache.rs - Session state persistence

This enables Custom Actions add/edit dialogs to work correctly.

--- a/defaults/config.toml
+++ b/defaults/config.toml
@@ -112,6 +112,35 @@ min_command_length = 3
 # Echo sent commands into the main window (prompt + command line)
 command_echo = true
 
+# Highlight color for active items in the Betrayer panel (leading "!" marker)
+betrayer_active_color = "#ff4040"
+
+# Prevent these openDialog windows from auto-opening (still parse their data).
+open_dialog_blocklist = [
+  "combat",
+  "injuries",
+  "stance",
+  "befriend",
+  "espMasterDialog",
+  "espMasterData",
+  "Buffs",
+  "Debuffs",
+  "Cooldowns",
+  "Active Spells",
+  "mapMaster",
+  "encum",
+  "minivitals",
+  "expr",
+]
+
+# --- Focus Navigation ---
+# Configure which windows are focusable via Tab and the optional cycle order.
+# If order is empty, VellumFE uses layout order filtered by focusable types.
+#
+# [ui.focus]
+# types = ["text", "tabbedtext", "quickbar", "targets", "players", "inventory", "spells"]
+# order = ["main", "thoughts", "quickbar"]
+
 # --- Performance Overlay (Debug) ---
 # Press F3 or use .perf command to toggle
 performance_stats_enabled = false
@@ -119,6 +148,26 @@ perf_stats_x = 0
 perf_stats_y = 0
 perf_stats_width = 35
 perf_stats_height = 23
+
+
+# ------------------------------------------------------------
+# QUICKBARS (CUSTOM)
+# ------------------------------------------------------------
+# Define custom quickbars that send custom commands.
+# IDs must be "quick" or start with "quick-".
+#
+# Example:
+# [quickbars]
+# default = "quick-custom"
+#
+# [[quickbars.custom]]
+# id = "quick-custom"
+# title = "Custom"
+# entries = [
+#   { type = "link", label = "look", command = "look" },
+#   { type = "sep" },
+#   { type = "link", label = "inventory", command = "inventory" }
+# ]
 
 
 # ------------------------------------------------------------
