fix: focus exclude list and spell abbreviations deadlock
Features:
- Add focus.exclude config to skip windows from focus cycling
- Example config: exclude = ["bounty", "society"]

Bug Fixes:
- Fix spell abbreviations reload deadlock
- Only reload spell abbrevs for DR games with perception window
- Spawn async thread to update spell matcher

Performance:
- Reuse compiled highlight regex patterns
- Add performance timing logs for reload operations

Debug:
- Add extensive tracing for reload and command flows

--- a/defaults/config.toml
+++ b/defaults/config.toml
@@ -139,6 +139,7 @@ open_dialog_blocklist = [
 #
 # [ui.focus]
 # types = ["text", "tabbedtext", "quickbar", "targets", "players", "inventory", "spells"]
+# exclude = ["bounty", "society"]
 # order = ["main", "thoughts", "quickbar"]
 
 # --- Performance Overlay (Debug) ---
