feat: global/character config system with [G]/[C] scope indicators
Implements a unified configuration pattern where shared defaults live
in ~/.vellum-fe/global/ and character-specific overrides in profiles/.

Changes:
- Move embedded defaults to defaults/globals/ directory
- Rename [global] keybind section to [app] for clarity
- Add global/character merge logic for keybinds, highlights, colors, config
- Show [G]/[C] scope indicators in all editor UIs
- Add 'g' key to toggle scope in settings/keybind/highlight/color editors
- Connection settings always character-specific (cannot toggle to global)
- Ctrl+S saves settings with scope-aware file targeting

This allows users to define shared configuration across all characters
while still supporting per-character overrides when needed.

--- a/defaults/globals/keybinds.toml
+++ b/defaults/globals/keybinds.toml
@@ -23,12 +23,12 @@
 #   tts_next, tts_previous, tts_pause_resume, tts_mute_toggle
 
 # ═══════════════════════════════════════════════════════════════════════════
-# GLOBAL KEYBINDS (Always active, highest priority)
+# APPLICATION KEYBINDS (Always active, highest priority)
 # ═══════════════════════════════════════════════════════════════════════════
 # These keybinds work in all modes and cannot be overridden by user keybinds.
-# Change these to customize your global shortcuts.
+# Change these to customize your application-wide shortcuts.
 
-[global]
+[app]
 quit = "ctrl+c"                    # Exit VellumFE
 start_search = "ctrl+f"            # Open search mode
 next_search_match = "ctrl+pagedown"  # Jump to next search result
