--- a/defaults/globals/spell_abbrev.toml
+++ b/defaults/globals/spell_abbrev.toml
@@ -1,3 +1,8 @@
+
+# These are for DragonRealms perception window.
+#
+# Not for GemstoneIV
+#
 # ============================================================
 # Spell Abbreviations
 # ============================================================
