fix: add missing open crate for LaunchURL feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,9 @@ arboard = "3"
 base64 = "0.22.1"
 sysinfo = "0.30"
 
+# URL opening (for LaunchURL)
+open = "5"
+
 [features]
 default = ["sound"]
 sound = ["dep:rodio"]
