--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,17 @@ open = "5"
 default = ["sound"]
 sound = ["dep:rodio"]
 
+# Platform-specific dependencies for window position persistence
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.58", features = [
+    "Win32_Foundation",
+    "Win32_System_Console",
+    "Win32_System_Threading",
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Graphics_Gdi",
+]}
+
 [profile.release]
 opt-level = 3
 lto = true
