feat: add items widget and fix widget lifecycle issues
- Add items widget for displaying room objects (non-creature items)
  - New items.rs with ListWidget-based implementation
  - Parses from room objs component (non-bold links)
  - Supports click for popup menu and drag-to-inventory

- Fix dashboard not resizing with terminal
  - Remove "dashboard" from static_both constraint in layout.rs
  - Dashboard now scales in both dimensions like other widgets

- Fix items widget not rendering when newly added
  - Add missing WidgetType::Items => WindowContent::Items mappings
  - Was falling through to WindowContent::Empty

- Fix widget type change not clearing old cached widget
  - Add remove_widget_from_all_caches() to widget_manager
  - Add widgets_to_reset field to ui_state
  - Clear old widget from ALL caches when type changes

--- a/defaults/globals/layouts/sidebar.toml
+++ b/defaults/globals/layouts/sidebar.toml
@@ -293,6 +293,7 @@ text_color = "-"
 transparent_background = false
 locked = false
 min_rows = 2
+max_rows = 5
 min_cols = 6
 visible = true
 content_align = "bottom-center"
@@ -388,9 +389,7 @@ title_position = "top-left"
 background_color = "-"
 text_color = "#FF0000"
 transparent_background = false
-locked = false
-visible = true
-id = "roundtime"
+locked = false\r\nmin_rows = 2\r\nmax_rows = 2\r\nvisible = true\r\nid = "roundtime"
 icon = ""
 color = "#FF0000"
 
